data/derived/sp14/progs/unify/prog1390.ml.out
Characters 268-279:
  | Thresh  (x,y,z,w) -> Printf.sprintf "%s<%s?%s:" exprToString x exprToString y exprToStringz;;
                                        ^^^^^^^^^^^
Error: This expression has type
         ('a -> 'b -> 'c, unit, string, string, string, 'a -> 'b -> 'c)
         CamlinternalFormatBasics.fmt
       but an expression was expected of type
         ('a -> 'b -> 'c, unit, string, string, string, string)
         CamlinternalFormatBasics.fmt
       Type 'a -> 'b -> 'c is not compatible with type string 
